--- a/user/views/layout.ejs
+++ b/user/views/layout.ejs
@@ -230,7 +230,7 @@
             <div class="border-t border-gray-600 mt-8 pt-8">
                 <div class="flex flex-col md:flex-row justify-between items-center">
                     <p class="text-gray-300 text-sm">
-                        © {new Date().getFullYear()} Maraneea Shop. All Rights Reserved.
+                        © <%= new Date().getFullYear() %> Maraneea Shop. All Rights Reserved.
                     </p>
                     <div class="flex space-x-6 mt-4 md:mt-0">
                         <a href="/privacy" class="footer-link text-sm">Kebijakan Privasi</a>
