--- a/user/views/auth/login.ejs
+++ b/user/views/auth/login.ejs
@@ -223,4 +223,7 @@ function showNotification(message, type = 'info') {
     }, 5000);
 }
 </script>
+</main>
+
+<%- include('../partials/footer') %>
 
